# Renderer3D

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/shaders/: light_source_fragment.glsl  light_source_vertex.glsl  model_geometry_pass_fragment.glsl  model_geometry_pass_vertex.glsl  model_lighting_pass_fragment.glsl  model_without_light_fragment.glsl  model_without_light_vertex.glsl  skybox_fragment.glsl  skybox_vertex.glsl
src/: CMakeLists.txt  camera.cpp  camera.h  controls.cpp  controls.h  deferred_shaderer.cpp  deferred_shaderer.h  entity.cpp  entity.h  floor.cpp  floor.h  main.cpp  mesh.cpp  mesh.h  model.cpp  model.h  models_manager.cpp  models_manager.h  point_light_source.cpp  point_light_source.h  point_lights_container.cpp  point_lights_container.h  renderer.cpp  renderer.h  scene.cpp  scene.h  shader.cpp  shader.h  skybox.cpp  skybox.h  spot_light_source.cpp  spot_light_source.h  spot_lights_factory.cpp  spot_lights_factory.h  texture.cpp  texture.h  window.cpp  window.h
